# mcp

./: Cargo.toml  README.md  mcp-server.sh  mcp_client.py
mcp_host/: .gitignore  Cargo.toml  ferox-http_alert_htb-1735427343.state  ferox-http_alert_htb-1735442816.state  ferox-http_alert_htb_messages_-1735442916.state
mcp_host/examples/: test_claude_stream.rs
mcp_host/src/: ai_client.rs  anthropic.rs  claude_realtime.md  conversation_service.rs  conversation_state.rs  deepseek.rs  gemini.rs  lib.rs  main.rs  my_regex.rs  openai.rs  realtime_api.rs  streaming.rs  tool_chaining.json  web_interface.rs
mcp_rust_host_one_file/: Cargo.toml
mcp_rust_host_one_file/src/: conversation_state.rs  main.rs  openai.rs  tool_chaining.json
mcp_tools/: Cargo.toml  check_module.sh  fix_syntax.sh
mcp_tools/src/: aider.rs  bash.rs  brave_search.rs  email_validator.rs  git_integration.rs  gmail_integration.rs  graph_database.rs  implement_this.rs  lib.rs  long_running_task.rs  main.rs  main_other.rs  main_other_1.rs  memory.rs  oracle.rs  oracle_tool.rs  process_html.rs  realtime_docs.md  regex_replace.rs  regex_replace.rs.bak  scraping_bee.rs  sequential_thinking.rs  task_planning.rs  tool_impls.rs  tool_trait.rs
realtime_test/: Cargo.toml
realtime_test/src/: index.html  main.rs  realtime_docs.md
shared_protocol_objects/: Cargo.toml
shared_protocol_objects/src/: lib.rs
web_scrape_mcp/: Cargo.toml
web_scrape_mcp/src/: bash.rs  brave_search.rs  git_integration.rs  graph_database.rs  lib.rs  main.rs  memory.rs  need_to_implement.rs  process_html.rs  processor.rs  regex_replace.rs  scraping_bee.rs  sequential_thinking.rs  task_planning.rs
