[workspace]
resolver = "2"
members = [
    "shared_protocol_objects",
    "mcp_host", 
    "mcp_tools", "realtime_test",
]

[workspace.dependencies]
env_logger = "0.10"
console = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
base64 = "0.21"
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3"

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
