[package]
name = "mcp_host"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = { workspace = true }
anyhow = "1.0.94"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["full"] }
uuid = {version ="1.11.0", features = ["v4", "serde"] }
regex = "1.9.5"
lazy_static = "1.4.0"
shared_protocol_objects = { path = "../shared_protocol_objects" }
schemars = "0.8"
base64 = "0.22.1"
image = "0.25.5"
sha2 = "0.10.8"
futures = "0.3.31"
reqwest = { version = "0.12.9", features = ["json", "multipart", "stream"] } 
log = "0.4.22"
console.workspace = true
async-trait = "0.1.83"
axum = { version = "0.7.9", features = ["macros"] }
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
bytes = "1.9.0"
tokio-stream = "0.1.17"
tower-http = { version = "0.6.2", features = ["trace"] }
