[package]
name = "mcp_tools"
version = "0.1.0"
edition = "2021"

[dependencies]
shared_protocol_objects = { path = "../shared_protocol_objects" }
tokio = { version = "1.42.0", features = ["full"] }
async-trait = "0.1.77"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
reqwest = { version = "0.12.9", features = ["json", "multipart", "stream"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
schemars = "0.8"
base64 = "0.22.1"
image = "0.25.5"
sha2 = "0.10.8"
futures = "0.3.31"
env_logger = "0.11.5"
tokio-stream = {version = "0.1.16", features = ["io-util"]}
uuid = { version = "1.7.0", features = ["v4"] }
markup5ever_rcdom = "0.3.0"
html5ever = "0.29.0"
html2text = "0.13.5"
mime_guess = "2.0.5"
thiserror = "2.0.5"
petgraph = "0.6.4"
chrono = { version = "0.4.31", features = ["serde"] }
url = "2.5.0"
regex = "1.11.1"
tempfile = "3.14.0"
indexmap = "2.7.0"
parking_lot = "0.12.3"
serde_yaml = "0.9.34+deprecated"
dirs = "5.0.1"
oracle = { version = "0.6.2", features = ["chrono"] }

[dev-dependencies]
wiremock = "0.6.2"
tokio-test = "0.4"
test-log = "0.2"
env_logger = "0.11.5"
pretty_assertions = "1.4"
