[package]
name = "realtime_test"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
axum = "0.7.9"
hyper = "1.5.2"
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = {version ="1.42.0", features = ["rt-multi-thread"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
