[package]
name = "web_scrape_mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
shared_protocol_objects = { path = "../shared_protocol_objects" }
tokio = { version = "1.42.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
reqwest = { version = "0.12.9", features = ["json", "multipart", "stream"] }
log = "0.4"
schemars = "0.8"
base64 = "0.22.1"
image = "0.25.5"
sha2 = "0.10.8"
futures = "0.3.31"
env_logger = "0.11.5"
tokio-stream = {version = "0.1.16", features = ["io-util"]}
uuid = { version = "1.7.0", features = ["v4"] }
markup5ever_rcdom = "0.3.0"
html5ever = "0.29.0"
html2text = "0.13.5"
mime_guess = "2.0.5"
thiserror = "2.0.5"


